force-app/main/default/objects/Bank_Case_Item__c/Bank_Case_Item__c.object-meta.xml
<CustomObject>
    <label>Bank Case Item</label>
    <nameField>
        <displayFormat>Bank Case Item-{00000}</displayFormat>
        <label>Bank Case Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Case Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>