force-app/main/default/objects/Bank_Case_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Bank_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>