force-app/main/default/objects/Bank_Case_Item__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Block</fullName>
                <label>Block Card</label>
            </value>
            <value>
                <fullName>Close</fullName>
                <label>Close Card</label>
            </value>
            <value>
                <fullName>Unblock</fullName>
                <label>Unblock Card</label>
            </value>
            <value>
                <fullName>Cancel Timed Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>