force-app/main/default/objects/Bank_Case_Item__c/fields/Api_Error__c.field-meta.xml
<CustomField>
    <fullName>Api_Error__c</fullName>
    <label>Api Error</label>
    <type>TextArea</type>
</CustomField>