force-app/main/default/objects/Bank_Case_Item__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipName>Bank_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>