force-app/main/default/objects/Bank_Case_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>