force-app/main/default/objects/Bank_Case_Item__c/fields/Identification__c.field-meta.xml
<CustomField>
    <fullName>Identification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Identification</label>
    <referenceTo>KYC_Detail__c</referenceTo>
    <relationshipName>Bank_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>