force-app/main/default/objects/Bank_Case_Item__c/fields/Is_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_Test__c</fullName>
    <formula>Case__r.Is_Test__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>