force-app/main/default/objects/Bank_Case_Item__c/fields/New_Card_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Card_Status__c</fullName>
    <label>New Card Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Card_Status_Values</valueSetName>
    </valueSet>
</CustomField>