force-app/main/default/objects/Bank_Case_Item__c/fields/New_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Order_Status__c</fullName>
    <label>New Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCHEDULED</fullName>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
            <value>
                <fullName>CANCELED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>