force-app/main/default/objects/Bank_Case_Item__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <formula>CASE( RecordType.DeveloperName , 
&apos;Account&apos;,HYPERLINK(&apos;/&apos;+ Account__c,Account__r.LastName,&apos;_self&apos;),
&apos;Bank_Account&apos;,HYPERLINK(&apos;/&apos;+Bank_Account__c,Bank_Account__r.Name,&apos;_self&apos;),
&apos;Booking&apos;,HYPERLINK(&apos;/&apos;+Booking__c ,Booking__r.Name,&apos;_self&apos;),
&apos;Card&apos;,HYPERLINK(&apos;/&apos;+Card__c,Card__r.Name,&apos;_self&apos;),
&apos;Reservation&apos;,HYPERLINK(&apos;/&apos;+Reservation__c,Reservation__r.Name,&apos;_self&apos;),
&apos;Standing_Order&apos;,HYPERLINK(&apos;/&apos;+Scheduled_Order__c,Scheduled_Order__r.Name,&apos;_self&apos;),
&apos;Statement&apos;,HYPERLINK(&apos;/&apos;+Statement__c ,Statement__r.Name,&apos;_self&apos;),
&apos;Timed_Order&apos;,HYPERLINK(&apos;/&apos;+Scheduled_Order__c ,Scheduled_Order__r.Name,&apos;_self&apos;),
&apos;Identification&apos;,HYPERLINK(&apos;/&apos;+Identification__c ,Identification__r.Name,&apos;_self&apos;),
&apos;&apos;)</formula>
    <label>Record</label>
    <type>Text</type>
</CustomField>