force-app/main/default/objects/Bank_Case_Item__c/fields/Scheduled_Order__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Order</label>
    <referenceTo>Scheduled_Order__c</referenceTo>
    <relationshipName>Bank_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>