force-app/main/default/objects/Bank_Case_Item__c/fields/Seizure__c.field-meta.xml
<CustomField>
    <fullName>Seizure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seizure</label>
    <referenceTo>Seizure__c</referenceTo>
    <relationshipName>Bank_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>