force-app/main/default/objects/Bank_Case_Item__c/fields/Statement__c.field-meta.xml
<CustomField>
    <fullName>Statement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statement</label>
    <referenceTo>Statement__c</referenceTo>
    <relationshipName>Bank_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>