force-app/main/default/objects/Bank_Case_Item__c/fields/Tax_Identification__c.field-meta.xml
<CustomField>
    <fullName>Tax_Identification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Identification</label>
    <referenceTo>Tax_Identification__c</referenceTo>
    <relationshipName>Bank_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>