force-app/main/default/objects/Bank_Case_Item__c/recordTypes/Bank_Account.recordType-meta.xml
<RecordType>
    <fullName>Bank_Account</fullName>
    <active>true</active>
    <label>Bank Account</label>
</RecordType>