force-app/main/default/objects/Bank_Case_Item__c/recordTypes/Booking.recordType-meta.xml
<RecordType>
    <fullName>Booking</fullName>
    <active>true</active>
    <label>Booking</label>
</RecordType>