force-app/main/default/objects/Bank_Case_Item__c/recordTypes/Card.recordType-meta.xml
<RecordType>
    <fullName>Card</fullName>
    <active>true</active>
    <label>Card</label>
</RecordType>