force-app/main/default/objects/Bank_Case_Item__c/recordTypes/Identification.recordType-meta.xml
<RecordType>
    <fullName>Identification</fullName>
    <active>true</active>
    <label>Identification</label>
</RecordType>