force-app/main/default/objects/Bank_Case_Item__c/recordTypes/Standing_Order.recordType-meta.xml
<RecordType>
    <fullName>Standing_Order</fullName>
    <active>true</active>
    <label>Standing Order</label>
</RecordType>