force-app/main/default/objects/Bank_Case_Item__c/recordTypes/Timed_Order.recordType-meta.xml
<RecordType>
    <fullName>Timed_Order</fullName>
    <active>true</active>
    <label>Timed Order</label>
</RecordType>